dev/ingress/fake9-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake9-ingress
  namespace: fake9-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake9.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake9-service
                port:
                  number: 20009
